frameworks/backend/redis/content/operate/rs/7.8/clusters/configure/license-keys.md
---
type: "Framework Learn Page"
framework: "Redis"
source_repo: "https://github.com/redis/docs.git"
source_branch: "main"
source_path: "content/operate/rs/7.8/clusters/configure/license-keys.md"
source_commit: "f8693349287b0efbef3c865b6f6a2aceca88594d"
source_commit_short: "f869334"
source_commit_date: "2026-08-28T10:01:19-05:00"
generated_at: "2026-08-29T09:38:55.449879Z"
---
# License Keys

---
Title: Cluster license keys
alwaysopen: false
categories:
- docs
- operate
- rs
description: The cluster key (or license) enables features and capacity within Redis
  Enterprise Software
linktitle: License keys
weight: 20
url: '/operate/rs/7.8/clusters/configure/license-keys/'
---
The cluster license key enables Redis Enterprise Software features and determines shard usage and limits.
You can add or update a cluster key at any time.

A single license can only be deployed on a single cluster. Each cluster, including passive or cold standby clusters used for disaster recovery, requires its own separate license, regardless of whether all clusters are active simultaneously.

## Trial mode

Trial mode allows all features to be enabled during the trial period.

Trial mode is limited to 30 days and 4 shards, including master and replica shards. A new Redis Enterprise Software installation starts its 30-day trial period from the day you set up the cluster on the first node.

Trial mode requires a trial license. If you do not provide a license when you create a cluster using the Cluster Manager UI or a [bootstrapping REST API request]({{< relref "/operate/rs/7.8/references/rest-api/requests/bootstrap#post-bootstrap" >}}), a trial cluster license is generated by default.

## View cluster license key

To view the cluster license key, use a [`GET /v1/license`]({{< relref "/operate/rs/7.8/references/rest-api/requests/license#get-license" >}}) REST API request. For a list of returned fields, see the [response section]({{< relref "/operate/rs/7.8/references/rest-api/requests/license#get-response" >}}).

{{<note>}}
As of version 7.2, Redis Enterprise enforces shard limits by shard types, RAM or flash, instead of the total number of shards. The flash shards limit only appears in the UI if Auto Tiering is enabled.
{{</note>}}

## Update cluster license

{{< note >}}
After you add a cluster key, you cannot remove the key to return the cluster to trial mode.
{{< /note >}}

You can update the cluster license key:

- During cluster setup using the Cluster Manager UI or CLI

- After cluster setup using the Cluster Manager UI:

    1. Go to **Cluster > Configuration > General > License**.
    
    1. Select **Change**.

    1. Upload or enter your cluster license key.
    
    1. Select **Save**.

You can update an existing cluster key at any time.
Redis Enterprise checks its validity for the following:
- Cluster name
- Activation and expiration dates
- Shard usage and limits
- Features

If saving a new cluster key fails, the operation returns an error with the failure's cause.
In this case, the existing key stays in effect.

## Expired cluster license

When the license is expired:

- You cannot do these actions:

    - Change database settings, including security and configuration options.

    - Add a database.

- You can do these actions:

    - Sign in to the Cluster Manager UI and view settings and metrics at all resolutions for the cluster, nodes, and databases.

    - Change cluster settings, including the license key, security for administrators, and cluster alerts.

    - Fail over when a node fails and explicitly migrate shards between nodes.

    - Upgrade a node to a new version of Redis Enterprise Software.

## Configure license expiration alert

By default, a cluster license alert is scheduled to occur 7 days before the cluster license expiration date.

{{<image filename="images/rs/screenshots/cluster/cluster-license-expiration-alert.png" alt="An alert appears in the Cluster Manager UI that says 'Your license will expire on day-month-year time. Contact support to renew your license.'" >}}

You can adjust the threshold value of the cluster license expiration alert based on how far in advance you want to be notified of the license expiration. The value should be within a reasonable range that allows your organization enough time to take action, such as renewing the license, before it expires.

To change the cluster license alert settings, use one of the following methods:

- Cluster Manager UI:

    1. On the **Cluster > Configuration** screen, select the **Alerts Settings** tab.

    1. Click **Edit**.

    1. In the **Cluster utilization** section, enable the alert setting "License expiry notifications will be sent \<value\> days before the license expires" and enter a new value in the box.

        {{<image filename="images/rs/screenshots/cluster/cluster-config-alert-settings-utilization.png" alt="Cluster utilization alert settings." >}}

    1. Click **Save**.


- [Update cluster]({{<relref "/operate/rs/7.8/references/rest-api/requests/cluster#put-cluster">}}) REST API request:

    The following example changes the cluster license alert to occur 30 days before the cluster license expiration date:

    ```sh
    PUT /v1/cluster
    {
        "alert_settings": {
            "cluster_license_about_to_expire": {
                "enabled": true,
                "threshold": "30"
            }
        }
    }
    ```

## Monitor cluster license

As of version 7.2, Redis Enterprise exposes the license quotas and the shards consumption metrics in the Cluster Manager UI or via the [Prometheus integration]({{< relref "/integrate/prometheus-with-redis-enterprise/" >}}).

The `cluster_shards_limit` metric displays the total shard limit by shard type.

Examples:
- `cluster_shards_limit{cluster="mycluster.local",shard_type="ram"} 100.0`
- `cluster_shards_limit{cluster="mycluster.local",shard_type="flash"} 50.0`

The `bdb_shards_used` metric displays the used shard count by database and shard type.

Examples:
- `bdb_shards_used{bdb="2",cluster="mycluster.local",shard_type="ram"} 86.0`
- `bdb_shards_used{bdb="3",cluster="mycluster.local",shard_type="flash"} 23.0`

